--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-styled-components",
+  "name": "quiz-nextjs-react-alura",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
